# cliptions

./: .cursorignore  .env.example  .gitattributes  .gitignore  BASELINE_REMOVAL_PLAN.md  BRANCH_ANALYSIS_CURSOR_ADD_FUNCTIONALITY.md  BROWSER_AUTOMATION_DEVELOPMENT.md  CHANGELOG.md  CLIP_INTEGRATION_SUMMARY.md  CLI_ENHANCEMENT_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DISCORD_BOT_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  PAYOUT_VERIFICATION_REPORT.md  README.md  REBRAND_COMPLETION_SUMMARY.md  RUST_README.md  STEGANOGRAPHY_PROOF_OF_WORK.md  TASK_1_5_4_IMPLEMENTATION_SUMMARY.md  TEST_COMPARISON.md  app.py  calculate_scores_payout.py  clip_embedder.py  demo_round_announcement.py  generate_commitment.py  generate_pedersen_commit.py  process_round_payouts.py  prompt.txt  random_number_guess.py  realmir.ipynb  requirements.txt  run_discord_bot.sh  scoring_versions.json  test_block.json  test_clip_embedder.py  test_miner_commitment.py  test_random_number_guess.py  test_round_announcement.py  (+1 more)
benches/: scoring_benchmark.rs
browser/: BROWSER_AUTOMATION_DEVELOPMENT.md  ROADMAP.md  __init__.py  data_models.py  get_twitter_replies.py  openai_usage_tracker.py  twitter_data_fetcher.py  twitter_replies.json
browser-use/: ROADMAP.md  example.py  get_twitter_replies.py  twitter_data_fetcher.py
config/: config.yaml.template  llm.yaml.template  realmir.yaml
core/: __init__.py  calculate_scores_payout.py  clip_embedder.py  interfaces.py  process_round_payouts.py  scoring_strategies.py  verify_commitments.py
crates/twitter-api/: Cargo.toml
crates/twitter-api/src/: lib.rs
data/: blocks.json  json_data_access.py  models.py  rounds.json
fee_frontend/: index.html  main.js
notebooks/: validate_clip_rankings.ipynb
rounds/: guesses.json
src/: actions.rs  block_engine.rs  block_processor.rs  commitment.rs  config.rs  data_access.rs  data_models.rs  embedder.rs  error.rs  facades.rs  lib.rs  main.rs  models.rs  payout.rs  proof_of_work.rs  python_bridge.rs  round.rs  round_processor.rs  scoring.rs  social.rs  steganography.rs  twitter_utils.rs  types.rs
(+68 files in other folders)
