[package]
name = "twitter-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client for API requests
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# URL encoding
urlencoding = "2.1"

# OAuth 1.0a signature generation
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"

# Random number generation for OAuth nonces
rand = "0.8"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# Path handling for image uploads  
# (using std::path from standard library)

[dev-dependencies]
mockall = "0.12"
